calibrazione/root programs/prova.txt
root [2] ,L PCanvas,C 
neroot [3] new PCanvas
(PCanvas *) 0x556832c74ca0
root [4] h_2021_02_09_15_19_23;1->Draw()
ROOT_prompt_4:1:26: error: member reference type 'int' is not a pointer
h_2021_02_09_15_19_23;1->Draw()
                      ~  ^
root [5] h_2021_02_09_15_19_23->Draw()
root [6] found new histogram 1D with name h_2021_02_09_15_19_23 
root [6] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2425 +- 0,0008
     fwhm = 1,8424 +- 0,0015      resol,(perc,) = 1,0697
     area = 1493384,8 +- 1423,3
---------------------------------------
     reduced chisquare: 16,255
---------------------------------------
root [6] error: peak out of region
--- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2386 +- 0,0008
     fwhm = 1,8398 +- 0,0015      resol,(perc,) = 1,0681
     area = 1493476,5 +- 1423,6
---------------------------------------
     reduced chisquare: 57,856
---------------------------------------
root [6] ^C
root [6] h_2021_02_09_15_39_23->Draw()
root [7] found new histogram 1D with name h_2021_02_09_15_39_23 
root [7] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2328 +- 0,0008
     fwhm = 1,8384 +- 0,0015      resol,(perc,) = 1,0674
     area = 1438041,4 +- 1379,3
---------------------------------------
     reduced chisquare: 42,764
---------------------------------------
root [7] ^C
root [7] h_2021_02_09_15_59_23->Draw()
root [8] found new histogram 1D with name h_2021_02_09_15_59_23 
root [8] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2327 +- 0,0008
     fwhm = 1,8385 +- 0,0015      resol,(perc,) = 1,0674
     area = 1382548,0 +- 1340,1
---------------------------------------
     reduced chisquare: 13,502
---------------------------------------
root [8] h_2021_02_09_15_79_23->Draw()
input_line_93:2:3: error: use of undeclared identifier 'h_2021_02_09_15_79_23'
 (h_2021_02_09_15_79_23->Draw())
  ^
Error in <HandleInterpreterException>: Error evaluating expression (h_2021_02_09_15_79_23->Draw()),
Execution of your code was aborted,
root [9] h_2021_02_09_16_19_23->Draw()
root [10] found new histogram 1D with name h_2021_02_09_16_19_23 
root [10] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2307 +- 0,0008
     fwhm = 1,8278 +- 0,0015      resol,(perc,) = 1,0613
     area = 1321817,8 +- 1305,9
---------------------------------------
     reduced chisquare: 20,461
---------------------------------------
root [10] h_2021_02_09_16_39_23->Draw()
root [11] found new histogram 1D with name h_2021_02_09_16_39_23 
root [11] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2288 +- 0,0008
     fwhm = 1,8262 +- 0,0016      resol,(perc,) = 1,0603
     area = 1265685,0 +- 1273,8
---------------------------------------
     reduced chisquare: 14,039
---------------------------------------
root [11] h_2021_02_09_16_59_23->Draw()
root [12] found new histogram 1D with name h_2021_02_09_16_59_23 
root [12] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2270 +- 0,0009
     fwhm = 1,8251 +- 0,0016      resol,(perc,) = 1,0597
     area = 1214808,4 +- 1244,1
---------------------------------------
     reduced chisquare: 12,928
---------------------------------------
root [12] h_2021_02_09_16_79_23->Draw()
input_line_98:2:3: error: use of undeclared identifier 'h_2021_02_09_16_79_23'
 (h_2021_02_09_16_79_23->Draw())
  ^
Error in <HandleInterpreterException>: Error evaluating expression (h_2021_02_09_16_79_23->Draw()),
Execution of your code was aborted,
root [13] h_2021_02_09_17_19_23->Draw()
root [14] found new histogram 1D with name h_2021_02_09_17_19_23 
root [14] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 171,7881 +- 0,0125
     fwhm = 1,6872 +- 0,0127      resol,(perc,) = 0,9821
     area = 387506,1 +- 28786,4
--- GAUSSIAN FIT: peak n,2 -----------
     peak = 172,4263 +- 0,0196
     fwhm = 1,6872 +- 0,0127      resol,(perc,) = 0,9785
     area = 784884,2 +- 28945,5
---------------------------------------
     reduced chisquare: 21,819
---------------------------------------
root [14] h_2021_02_09_17_39_23->Draw()
root [15] found new histogram 1D with name h_2021_02_09_17_39_23 
root [15] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2215 +- 0,0009
     fwhm = 1,8249 +- 0,0017      resol,(perc,) = 1,0596
     area = 1121252,0 +- 1188,3
---------------------------------------
     reduced chisquare: 11,205
---------------------------------------
root [15] h_2021_02_09_17_59_23->Draw()
root [16] found new histogram 1D with name h_2021_02_09_17_59_23 
root [16] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2210 +- 0,0009
     fwhm = 1,8189 +- 0,0017      resol,(perc,) = 1,0561
     area = 1071990,8 +- 1160,2
---------------------------------------
     reduced chisquare: 14,405
---------------------------------------
root [16] h_2021_02_09_18_19_23->Draw()
root [17] found new histogram 1D with name h_2021_02_09_18_19_23 
root [17] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2131 +- 0,0009
     fwhm = 1,8207 +- 0,0017      resol,(perc,) = 1,0572
     area = 1031823,7 +- 1135,4
---------------------------------------
     reduced chisquare: 15,286
---------------------------------------
root [17] h_2021_02_09_18_39_23->Draw()
root [18] found new histogram 1D with name h_2021_02_09_18_39_23 
root [18] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2145 +- 0,0009
     fwhm = 1,8098 +- 0,0017      resol,(perc,) = 1,0509
     area = 984408,4 +- 1109,4
---------------------------------------
     reduced chisquare: 17,511
---------------------------------------
root [18] h_2021_02_09_18_59_23->Draw()
root [19] found new histogram 1D with name h_2021_02_09_18_59_23 
root [19] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2109 +- 0,0009
     fwhm = 1,8150 +- 0,0018      resol,(perc,) = 1,0539
     area = 946439,0 +- 1083,7
---------------------------------------
     reduced chisquare: 9,441
---------------------------------------
root [19] h_2021_02_09_19_19_23->Draw()
root [20] found new histogram 1D with name h_2021_02_09_19_19_23 
root [20] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2086 +- 0,0010
     fwhm = 1,8106 +- 0,0018      resol,(perc,) = 1,0514
     area = 907319,2 +- 1060,3
---------------------------------------
     reduced chisquare: 21,049
---------------------------------------
root [20] h_2021_02_09_19_39_23->Draw()
root [21] found new histogram 1D with name h_2021_02_09_19_39_23 
root [21] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2056 +- 0,0010
     fwhm = 1,8132 +- 0,0018      resol,(perc,) = 1,0529
     area = 877157,9 +- 1038,3
---------------------------------------
     reduced chisquare: 26,697
---------------------------------------
root [21] h_2021_02_09_19_59_23->Draw()
root [22] found new histogram 1D with name h_2021_02_09_19_59_23 
root [22] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2081 +- 0,0010
     fwhm = 1,8080 +- 0,0019      resol,(perc,) = 1,0499
     area = 835250,3 +- 1014,9
---------------------------------------
     reduced chisquare: 11,985
---------------------------------------
root [22] h_2021_02_09_20_19_23->Draw()
root [23] found new histogram 1D with name h_2021_02_09_20_19_23 
root [23] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2047 +- 0,0010
     fwhm = 1,8129 +- 0,0019      resol,(perc,) = 1,0528
     area = 801393,1 +- 992,3
---------------------------------------
     reduced chisquare: 14,122
---------------------------------------
root [23] h_2021_02_09_20_39_23->Draw()
root [24] found new histogram 1D with name h_2021_02_09_20_39_23 
root [24] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2052 +- 0,0010
     fwhm = 1,8123 +- 0,0020      resol,(perc,) = 1,0524
     area = 770984,1 +- 971,3
---------------------------------------
     reduced chisquare: 11,406
---------------------------------------
root [24] h_2021_02_09_20_9_23->Draw()
input_line_111:2:3: error: use of undeclared identifier 'h_2021_02_09_20_9_23'
 (h_2021_02_09_20_9_23->Draw())
  ^
Error in <HandleInterpreterException>: Error evaluating expression (h_2021_02_09_20_9_23->Draw()),
Execution of your code was aborted,
root [25] h_2021_02_09_20_59_23->Draw()
root [26] found new histogram 1D with name h_2021_02_09_20_59_23 
root [26] --- GAUSSIAN FIT: peak n,1 -----------
     peak = 172,2081 +- 0,0011
     fwhm = 1,8103 +- 0,0020      resol,(perc,) = 1,0512
     area = 739167,4 +- 950,8
---------------------------------------
     reduced chisquare: 8,974
---------------------------------------

